React3_4-API_zrobione

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -342,6 +342,7 @@ textarea {
     }
 
     .form {
+        display: block;
         padding: 1rem;
         grid-template-columns: 1fr;
         text-align: left;
