--- a/public/css/style.css
+++ b/public/css/style.css
@@ -59,6 +59,14 @@ nav ul {
     list-style-type: none;
 }
 
+nav ul li button {
+    background-color: transparent;
+    border: 0;
+    color: #2c3e50;
+    text-decoration: none;
+    padding: 0 5px;
+}
+
 nav ul li a {
 
     background-color: #bdc3c7;
@@ -67,7 +75,8 @@ nav ul li a {
     text-decoration: none;
 }
 
-nav ul li a:hover {
+nav ul li a:hover,
+nav ul li button:hover {
     background-color: #d35400;
     color: #ecf0f1;
 }
@@ -318,7 +327,13 @@ textarea {
         text-align: center;
     }
 
-    nav ul li a {
+    nav ul li.lang {
+        margin-left: auto;
+    }
+    
+
+    nav ul li a,
+    nav ul li button {
         display: block;
     }
 
