--- a/public/css/style.css
+++ b/public/css/style.css
@@ -59,12 +59,17 @@ nav ul {
     list-style-type: none;
 }
 
+
+
 nav ul li button {
+    cursor: pointer;
     background-color: transparent;
     border: 0;
     color: #2c3e50;
     text-decoration: none;
-    padding: 0 5px;
+    padding: 0 2rem; 
+    border-radius: 5px;
+    
 }
 
 nav ul li a {
@@ -256,7 +261,8 @@ textarea {
 .form input[type="text"],
 .form input[type="number"],
 .form input[type="date"],
-.form input[type="email"] {
+.form input[type="email"],
+.form input[type="password"] {
     border: 1px solid #7f8c8d;
     color: #2c3e50;
     border-radius: 5px;
@@ -304,7 +310,7 @@ textarea {
     padding: 1rem;
 }
 
-@media all and (max-width: 720px) {
+@media all and (max-width: 1000px) {
     header {
         flex-direction: column;
     }
@@ -323,12 +329,12 @@ textarea {
     }
 
     nav ul li {
-        flex-basis: 50%;
+        flex-basis: auto;
         text-align: center;
     }
 
-    nav ul li.lang {
-        margin-left: auto;
+    nav ul li button {
+        padding: 1rem 2rem;
     }
     
 
@@ -398,14 +404,18 @@ textarea {
     }
 
     nav ul li {
-        flex-basis: 100%;
+        flex-basis: auto;
     }
     nav ul {
         flex-wrap: wrap;
     }
-    nav ul li a {
+    nav ul li {
         display: block;
     }
+
+    /* nav ul li button {
+        align-items: center;
+    } */
 
     img {
         width: 150px;
